name:                sturdy-while
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     WhileLanguage,
                       Label
--                       ConcreteSemantics,
--                       ConcreteSemanticsReadVars,
--                       ConcreteSemanticsFailedReads,
--                       ConcreteSemanticsDeadWrites,
--                       ControlFlowGraph,
--                       IntervalAnalysis,
--                       IntervalAnalysisReadVars,
--                       IntervalAnalysisFailedReads,
--                       IntervalAnalysisDeadWrites,

                       Vals.Concrete.Val
                       Vals.Concrete.Semantic
                       Vals.Interval.Val
                       Vals.Interval.Semantic

                       Props.FailedReads.Prop
                       Props.FailedReads.Concrete
                       Props.FailedReads.Interval

                       Props.ReadVars.Prop
                       Props.ReadVars.Concrete
                       Props.ReadVars.Interval

--                       Props.ControlFlow.Prop
--                       Props.ControlFlow.Concrete
--                       Props.ControlFlow.Interval
--                       Symbolic
  build-depends:       base,
                       sturdy-lib,
                       text,
                       containers,
                       mtl,
                       numeric-limits,
                       hashable,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       text,
                       QuickCheck,
                       hspec,
                       hspec-core,
                       numeric-limits,
                       sturdy-lib,
                       sturdy-while
  default-language:    Haskell2010
  other-modules:       Soundness
                       WhileLanguageSoundness

                       Specs.IntervalSpec
                       Specs.FailedReadsSpec
                       Specs.ReadVarsSpec
