name:                sturdy-while
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@gmail.com
category:            Language
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     WhileLanguage,
                       Label

                       Vals.Concrete.Val
                       Vals.Concrete.Semantics

                       Vals.Interval.Val
                       Vals.Interval.Semantics

                       Vals.Symbolic.Val
                       Vals.Symbolic.Semantics

                       Props.FailedReads.Prop
                       Props.FailedReads.Concrete
                       Props.FailedReads.Interval

                       Props.ReadVars.Prop
                       Props.ReadVars.Concrete
                       Props.ReadVars.Interval

                       Props.LiveVariables.Prop
                       Props.LiveVariables.Concrete
                       Props.LiveVariables.Interval

                       Props.ControlFlow.Prop
                       Props.ControlFlow.Concrete
                       Props.ControlFlow.Interval

                       Props.UseDef.Prop
                       Props.UseDef.Concrete
                       Props.UseDef.Interval

                       Props.UseDef.ReachingDefinitions.Prop
                       Props.UseDef.ReachingDefinitions.Concrete
                       Props.UseDef.ReachingDefinitions.Interval

                       Props.UseDef.DeadStores.Prop
                       Props.UseDef.DeadStores.Concrete
                       Props.UseDef.DeadStores.Interval


  ghc-options:         -Wall
  build-depends:       base,
                       containers,
                       hashable,
                       mtl,
                       random,
                       sturdy-lib,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       containers,
                       hspec,
                       hspec-core,
                       sturdy-lib,
                       sturdy-while,
                       text,
                       QuickCheck
  default-language:    Haskell2010
  other-modules:       Soundness
                       WhileLanguageSoundness

                       Specs.IntervalSpec
                       Specs.FailedReadsSpec
                       Specs.ReadVarsSpec
                       Specs.ControlFlowSpec

                       Specs.UseDef.ReachingDefinitionsSpec
                       Specs.UseDef.DeadStoresSpec
